k8_manifest/sig-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpson-prod-sig-deployment
  namespace: simpson-videochat
spec:
  selector:
    matchLabels:
      app: simpson-prod-sig
  replicas: 1
  template:
    metadata:
      labels:
        app: simpson-prod-sig
    spec:
      containers:
      - name: simpson-prod-sig-container
        image: 792387376808.dkr.ecr.ap-northeast-1.amazonaws.com/simpson-prod-sig:latest
        ports:
        - containerPort: 8001
