k8_manifest/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpson-prod-api-service
  namespace: simpson-videochat
spec:
  type: NodePort
  ports:
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: simpson-prod-api
