k8_manifest/mng-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpson-prod-mng-service
  namespace: simpson-videochat
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8003
  selector:
    app: simpson-prod-mng
