k8_manifest/mongo-turn-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simpson-prod-mongo-turn-service
  namespace: simpson-videochat
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo-turn
