k8_manifest/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simpson-prod-redis-service
  namespace: simpson-videochat
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
