k8_manifest/sig-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpson-prod-sig-service
  namespace: simpson-videochat
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8001
  selector:
    app: simpson-prod-sig
