k8_manifest/turn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpson-prod-turn-service
  namespace: simpson-videochat
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  ports:
  - name: udp
    port: 3478
    protocol: UDP
    targetPort: 3478
  - name: tcp
    port: 3478
    protocol: TCP
    targetPort: 3478
  selector:
    app: simpson-prod-turn
